<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoalta"
    android:onClick="añadir">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNombre"
        android:hint="@string/nombreReceta"
        android:textSize="21sp"
        android:textColorHint="#18540a"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/categoria"
        android:id="@+id/tvCategoria"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/rg"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aperitivo"
            android:id="@+id/rbAperitivo"
            android:layout_marginTop="4dp"
            android:checked="false"
            android:layout_marginLeft="10dp"
            android:textColor="#f4e8d3" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carne"
            android:id="@+id/rbCarne"
            android:layout_marginTop="4dp"
            android:checked="false"
            android:layout_marginLeft="8dp"
            android:textColor="#9e1208" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pescado"
            android:id="@+id/rbPescado"
            android:layout_marginTop="4dp"
            android:checked="false"
            android:layout_marginLeft="8dp"
            android:textColor="#0c2f85" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postre"
            android:id="@+id/rbPostre"
            android:layout_marginTop="4dp"
            android:checked="false"
            android:layout_marginLeft="8dp"
            android:textColor="#5e2604" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvPasos"
        android:text="@string/pasos"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:textSize="22sp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPaso1"
        android:hint="@string/paso1"
        style="@style/hintoscuro"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPaso2"
        android:hint="@string/paso2"
        style="@style/hintoscuro"

        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPaso3"
        android:hint="@string/paso3"
        style="@style/hintoscuro"

        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPaso4"
        android:hint="@string/paso4"
        style="@style/hintoscuro"

        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPaso5"
        android:hint="@string/paso5"
        style="@style/hintoscuro"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/btAdd"
            android:layout_marginTop="5dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_marginLeft="8dp"
            android:onClick="añadir" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addingrediente"
            android:id="@+id/btIngrediente"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:onClick="addIngredientes" />
    </LinearLayout>

</LinearLayout>