<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoalta">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/editorreceta"
        android:id="@+id/tvEditar"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNombre"
        android:hint="@string/nombreReceta"
        android:textSize="21sp"
        android:textColorHint="#18540a"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:textStyle="italic"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/categoria"
        android:id="@+id/tvCategoria"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:textSize="22sp"
        android:textColor="#252525" />

    <RadioGroup
        android:id="@+id/rg"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aperitivo"
            android:id="@+id/rbAperitivo"
            android:layout_marginTop="4dp"
            android:checked="false"
            android:layout_marginLeft="1dp"
            android:textColor="#f4e8d3" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carne"
            android:id="@+id/rbCarne"
            android:layout_marginTop="4dp"
            android:checked="false"
            android:layout_marginLeft="1dp"
            android:textColor="#9e1208" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pescado"
            android:id="@+id/rbPescado"
            android:layout_marginTop="4dp"
            android:checked="false"
            android:layout_marginLeft="1dp"
            android:textColor="#0c2f85" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postre"
            android:id="@+id/rbPostre"
            android:layout_marginTop="4dp"
            android:checked="false"
            android:layout_marginLeft="1dp"
            android:textColor="#5e2604" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvPasos"
        android:text="@string/pasos"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:textSize="22sp"
        android:textColor="#242424" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPaso1"
        android:hint="@string/pasos"
        style="@style/hintoscuro"

        android:layout_marginLeft="15dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editaringredientes"
        android:id="@+id/btEditarIngredientes"
        android:layout_gravity="right"
        android:layout_marginRight="15dp" />

</LinearLayout>